# telegram-llm-assistant

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  schema.sql
.sqlx/: query-0a752fbe07d8bc9f5cbfddbdd939b8898140cb3f61b4fb198bdc549bdd365aa5.json  query-5198680b87a4a532a611ff41362c3989514c782b359c54279dc56e1c51a10bac.json  query-58e8b1a97fee6b993c434d9a577550f82150a58cd33feb1a4a5d9db72dfb5e94.json  query-5e5b70733a1f242d7c955b9c0fc07a4bcc49edc84a5c489737161ce6304930a6.json  query-65050176242956c472384259f26889eee557973efd0e4f74b4c903bf332246f6.json  query-7751ae4f58c59c90b9a62900eee95ffeb9cf111290b74a779e560dee48cfe88a.json  query-a236bb9b384534721bffaa6b80974312317e3923a497904aa9b83c0118301bb4.json  query-c7262f42a7206fc8f96c0dad86f4c4ea74141ccd989f25b5553d46124eedd1d9.json  query-db1bfd7d841535f39e904ffcf0bff7f360a560f89fdeef2987846acb04593087.json  query-e2a13d682bd1aaaf40cf7517295b35c3a618ce5207666858ce46f58d6cc08f91.json
src/: bot.rs  config.rs  db.rs  llm.rs  main.rs
src/db/: chat_bot.rs  chat_message.rs  chat_thread.rs  migration.rs
src/llm/: groq.rs  llm_thread_message.rs  mock.rs  mod.rs  openai.rs
