[package]
name = "telegram-llm-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "chrono",
] }
rayon = "1.10.0"
mobot = "0.3.10"
anyhow = "1.0.82"
rand = "0.8.5"
chrono = "0.4.38"
async-openai = "0.12.1"
async-trait = "0.1.80"
clap = { version = "4.3.19", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.200"
